2011-03-22 Alexander Malysh <amalysh at kannel.org>
    * applied patch that fixes DDos issue with our HTTP-Server implementation
      (consume all available file descriptors) and also adds possibility to
      set keep alive timeout for each listen port.

This patch will limit maximum open client connections to 500. 

2011-03-25  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_sqlite3.c: ensure we handle the sqlite3 version >= 3.3.9
      function call switching via #if pre-processor macro so we choose either
      sqlite3_prepare_v2() if we do have a local sqlite3 version that supports
      it. This ensures we build again on CentOS 5.x ie.
      [Message-Id: <4D8A73B6.4050508@tolj.org>]

2011-03-22 Alexander Malysh <amalysh at kannel.org>
    * debian/kannel-cvs.init, debian/kannel-devel.init, debian/kannel.init: added status
      command.
      Thanks to Konstantin Vayner <poncha at appcell.net> for this patch.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * test/test_http_server.c: don't do anythink that use threading in signal handler.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: fixed alt-charset issue that we try to reencode even
      binary and UCS2 data.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: added new method.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * test/test_http_server.c: don't do anythink that use threading in signal handler.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: fixed alt-charset issue that we try to reencode even
      binary and UCS2 data.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: added new method.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: indents.

2011-03-21 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: Comparing a va_list with NULL is bogus. It's supposed to be treated like